--- a/site/_includes/codebase.html
+++ b/site/_includes/codebase.html
@@ -18,14 +18,17 @@
     under the License.
 
 -->
-{% for dir in site.data.codebase.directories %}
-<div class="card">
-  <div class="card-block">
-    <h2 class="card-title">{{ dir.name }}</h2>  <a href="{{ site.pulsar_repo }}/{{ dir.name }}"><i class="fa fa-github fa-lg"></i></a>
-    <p>{{ dir.language }}</p>
-    <div class="card-text">
+
+<section class="codebase">
+  {% for dir in site.data.codebase.directories %}
+  <div class="card">
+    <div class="card-block">
+      <h2 class="card-title">{{ dir.name }} <a href="{{ site.pulsar_repo }}/{{ dir.name }}"><i class="fa fa-github"></i></a></h2>
+      <section class="card-text">
       {{ dir.description | markdownify }}
+      {% if dir.language %}<span>Languages: {{ dir.language }}</span>{% endif %}
+      </section>
     </div>
   </div>
-</div>
-{% endfor %}
+  {% endfor %}
+</section>
