--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -24,19 +24,19 @@
   </button>
 
  {% if page.url != "/" %}
-  <a class="navbar-brand" href="{{ site.baseurl }}">
-    <img class="main-logo" src="{{ site.baseurl }}img/pulsar-logo.png" alt="Pulsar logo">
+  <a class="navbar-brand" href="/">
+    <img class="main-logo" src="/img/pulsar-logo.png" alt="Pulsar logo">
   </a>
   {% endif %}
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{{ site.baseurl }}docs/latest">Documentation</a>
+        <a class="nav-link" href="/docs/latest/getting-started/LocalCluster">Documentation</a>
       </li>
 
       <li class="nav-item">
-          <a class="nav-link" href="{{ site.baseurl }}download">Download</a>
+          <a class="nav-link" href="/download">Download</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -44,13 +44,13 @@
           Client libraries
         </a>
         <div class="dropdown-menu" aria-labelledby="clientLibsDropdown">
-          <a class="dropdown-item" href="{{ site.baseurl }}docs/latest/applications/JavaClient">
+          <a class="dropdown-item" href="/docs/latest/clients/Java">
             Java
           </a>
-          <a class="dropdown-item" href="{{ site.baseurl }}docs/latest/applications/PythonClient">
+          <a class="dropdown-item" href="/docs/latest/clients/Python">
             Python
           </a>
-          <a class="dropdown-item" href="{{ site.baseurl }}docs/latest/applications/CppClient">
+          <a class="dropdown-item" href="/docs/latest/clients/Cpp">
             C++
           </a>
           <div class="dropdown-divider"></div>
@@ -80,6 +80,8 @@
           <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/wiki">Wiki</a>
           <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/issues">Issue tracking</a>
           <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/presentations">Presentations</a>
+          <a class="dropdown-item" href="/team">Team</a>
           <h3 class="dropdown-header">Resources</h3>
           <a class="dropdown-item" href="{{ site.baseurl }}presentations">Presentations</a>
           <a class="dropdown-item" href="{{ site.baseurl }}team">Team</a>
@@ -95,6 +97,6 @@
     </ul>
   </div>
   <a href="http://www.apache.org/">
-    <img class="asf-logo" title="Apache Software Foundation" src="{{site.baseurl}}img/feather.png" />
+    <img class="asf-logo" title="Apache Software Foundation" src="/img/feather.png" />
   </a>
 </nav>
